<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CalculadoraExamen</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="lbnCalculadora">CALCULADORA</string>
    <string name="btnCalculadoraEstandar">CALCULADORA ESTANDAR</string>
    <string name="btnCalculadoraCientifica">CALCULADORA CIENTIFICA</string>
    
    <string name="Numero0">0</string>
    <string name="Numero1">1</string>
    <string name="Numero2">2</string>
    <string name="Numero3">3</string>
    <string name="Numero4">4</string>
    <string name="Numero5">5</string>
    <string name="Numero6">6</string>
    <string name="Numero7">7</string>
    <string name="Numero8">8</string>
    <string name="Numero9">9</string>
    
    <string name="suma">+</string>
    <string name="resta">-</string>
    <string name="mul">*</string>
    <string name="div">/</string>
    
    <string name="punto">.</string>
    <string name="igual">=</string>
    
    
    <string name="sen">Sen</string>
    <string name="cos">Cos</string>
    <string name="tan">Tan</string>
    
    <string name="exp">Exp</string>
    <string name="Raiz">Ra</string>
    <string name="del">De</string>
    <string name="ac">AC</string>
    
    <string name="Boton2"></string>
    <string name="Boton3"></string>
    <string name="Cuadrado">X^2</string>
    <string name="Exponencial">X^y</string>
    <string name="Cubo">X^3</string>
    <string name="Logaritmo">Log</string>
    
    <string name="Boton4"></string>
    <string name="Boton5"></string>
    <string name="Boton6"></string>
    <string name="Boton7"></string>
    <string name="Boton8"></string>
    <string name="Factorial">n!</string>
    <string name="RaizY">R^Y</string>
    <string name="RaizCubo">R^3</string>
    <string name="DiesExp">10^x</string>
    
    <string name="MC">MC</string>
    <string name="MR">MR</string>
    <string name="MS">MS</string>
    <string name="Mmas">M+</string>
    <string name="Mmenos">M-</string>
    
    <string name="CE">CE</string>
    <string name="Porcentaje">%</string>
    <string name="UnoEntreX">1/x</string>
    <string name="MasMenos">+-</string>
    
    
    
    
    
    

</resources>
