<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pe.edu.upeu.calculadoraexamen.MainActivity" >

    <TextView
        android:id="@+id/texto"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#D5D5D5"
        android:text="" />
    
    <LinearLayout 
        android:id="@+id/Layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/texto"
        android:layout_centerHorizontal="true"
        android:background="#D5D5D5"
        android:layout_marginTop="16dp" >
        
        	<LinearLayout 
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:orientation="vertical" >
        		
        	    <Button
        	    	android:id="@+id/btnSen" 
        	    	android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="@string/sen"   
        	    	/>
        	    <Button
        	    	android:id="@+id/btnExp" 
        	    	android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="@string/exp"   
        	    	/>
        	    <Button
        	    	android:id="@+id/btn7" 
        	    	android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="@string/Numero7"   
        	    	/>
        	    <Button
        	    	android:id="@+id/btn4" 
        	    	android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="@string/Numero4"   
        	    	/>
        	    <Button
        	    	android:id="@+id/btn1" 
        	    	android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="@string/Numero1"   
        	    	/>
        	    <Button
        	    	android:id="@+id/btnPunto" 
        	    	android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="@string/punto"   
        	    	/>
        	    
        
    		</LinearLayout>
    		
        	<LinearLayout 
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:orientation="vertical" >
        		
        	    <Button
        	    	android:id="@+id/btnCos" 
        	    	android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="@string/cos"   
        	    	/>
        	    <Button
        	    	android:id="@+id/btnRaiz" 
        	    	android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="@string/raiz"   
        	    	/>
        	    <Button
        	    	android:id="@+id/btn8" 
        	    	android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="@string/Numero8"   
        	    	/>
        	    <Button
        	    	android:id="@+id/btn5" 
        	    	android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="@string/Numero5"   
        	    	/>
        	    <Button
        	    	android:id="@+id/btn2" 
        	    	android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="@string/Numero2"   
        	    	/>
        	    <Button
        	    	android:id="@+id/btn0" 
        	    	android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="@string/Numero0"   
        	    	/>
        	    
        
    		</LinearLayout>
    		
        	<LinearLayout 
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:orientation="vertical" >
        		
        	    <Button
        	    	android:id="@+id/btnTan" 
        	    	android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="@string/tan"   
        	    	/>
        	    <Button
        	    	android:id="@+id/btnBorrar" 
        	    	android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="@string/del"   
        	    	/>
        	    <Button
        	    	android:id="@+id/btn9" 
        	    	android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="@string/Numero9"   
        	    	/>
        	    <Button
        	    	android:id="@+id/btn6" 
        	    	android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="@string/Numero6"   
        	    	/>
        	    <Button
        	    	android:id="@+id/btn3" 
        	    	android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="@string/Numero3"   
        	    	/>
        	    <Button
        	    	android:id="@+id/btnIgual" 
        	    	android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="@string/igual"   
        	    	/>
        	    
        
    		</LinearLayout>
    		
        	<LinearLayout 
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:orientation="vertical" >
        		
        	    <Button
        	    	android:id="@+id/pb" 
        	    	android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text=""   
        	    	/>
        	    <Button
        	    	android:id="@+id/btnLimpiar" 
        	    	android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="@string/ac"   
        	    	/>
        	    <Button
        	    	android:id="@+id/btnDiv" 
        	    	android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="@string/div"   
        	    	/>
        	    <Button
        	    	android:id="@+id/btnMul" 
        	    	android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="@string/mul"   
        	    	/>
        	    <Button
        	    	android:id="@+id/btnResta" 
        	    	android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="@string/resta"   
        	    	/>
        	    <Button
        	    	android:id="@+id/btnSuma" 
        	    	android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="@string/suma"   
        	    	/>
        	    
        
    		</LinearLayout>
    </LinearLayout>

</RelativeLayout>