<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pe.edu.upeu.calculadoraexamen.MainActivity" >

    <TextView
        android:id="@+id/textView1"
        style="@style/lbnEstilo1" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/lbnCalculadora" />

    <Button
        android:id="@+id/btnCalEst"
        style="@style/btnEstilo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:onClick="onIngresar"
        android:text="@string/btnCalculadoraEstandar" />

    <Button
        android:id="@+id/btnCalCien"
        style="@style/btnEstilo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="onIngresar"
        android:text="@string/btnCalculadoraCientifica" />

</RelativeLayout>
